# oxy-glauber

./: Cargo.toml  README.md
examples/: run_glauber.rs  run_save_ntuple.rs  run_smear_ntuple.rs
src/: cross_section.rs  glauber.rs  lib.rs  nucleon.rs  nucleus.rs  profile.rs  random.rs
